--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "@tsonic/dotnet": "0.8.8"
   },
   "devDependencies": {
-    "typescript": "^5.0.0"
+    "typescript": "5.9.3"
   },
   "keywords": [
     "tsonic",
